Coded HTML for  header,footer, and half of homepage

--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,53 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <header>
+
+    <div class="content-wrapper">
+      <a href="#"><img src="" alt="unplugged logo"></a>
+      <div class="header-divider">
+        <img src="assets/unpluggedlogo.png">
+      </div>
+
+      <nav>
+        <ul>
+          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="about/index.html" target="_blank">ABOUT</a></li>
+        </ul>
+      </nav>
+
+      <h2>Retreat from the desk, return refreshed.</h2>
+    </div>
+
+  </header>
+
+  <main></main>
+
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <div class="contact">
+          <address>
+            <p>555-555-5555 <br>
+              <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
+            </p>
+        </address>
+        </div>
+        <div class="social">
+          <div class="social-icons">
+            <p><a href="http://www.facebook.com" target="_blank"></a></p>
+            <p><a href="http://www.twitter.com" target="_blank"></a></p>
+            <p><a href="http://www.instagram.com" target="_blank"></a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="copywright">
+      <p>Copywright 2015 | Unplugged</p>
+    </div>
+  </footer>
+  
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
