--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -12,23 +12,91 @@
   <meta property="og:url" content="">
   <meta property="og:image" content="">
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="manifest" href="../site.webmanifest">
+  <link rel="apple-touch-icon" href="../icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../css/normalize.css">
+  <link rel="stylesheet" href="../css/main.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
-
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+  <header>
+
+    <div class="content-wrapper">
+      <a href="#"><img src="" alt="unplugged logo"></a>
+      <div class="header-divider">
+        <img src="assets/unpluggedlogo.png">
+      </div>
+
+      <nav>
+        <ul>
+          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="about/index.html" target="_blank">ABOUT</a></li>
+        </ul>
+      </nav>
+
+      <h2>Retreat from the desk, return refreshed.</h2>
+    </div>
+
+  </header>
+
+  <main>
+    <section>
+      <div>
+        <h2>Have the work week you always dreamed of &mdash; without the bad wifi.</h2>
+      </div>
+
+      <h2>Be a better team in 5 days, like these.</h2>
+      <img src="assets/omar-lopez-296944-unsplash.jpg">
+      <h4>LaCrue Bottling Co. <br> October 2017</h4>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
+        dolore eu fugiat nulla pariatur.</p>
+    </section>
+
+    <aside>
+      <div class="sign-up">
+        <h4>Want to join the next retreat?</h4>
+        <p>Find out where we are holding our next retreat and how your company or team can sign up!</p> 
+        <p>Find out more.</p>
+        <input type="text" name="name" value="email address">
+        <input type="button" value="Download Itinery">
+      </div>
+    </aside>
+  </main>
+
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <div class="contact">
+          <address>
+            <p>555-555-5555 <br>
+              <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
+            </p>
+        </address>
+        </div>
+        <div class="social">
+          <div class="social-icons">
+            <p><a href="http://www.facebook.com" target="_blank"></a></p>
+            <p><a href="http://www.twitter.com" target="_blank"></a></p>
+            <p><a href="http://www.instagram.com" target="_blank"></a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="copywright">
+      <p>Copywright 2015 | Unplugged</p>
+    </div>
+  </footer>
+  
+  <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
+  <script src="../js/plugins.js"></script>
+  <script src="../js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
