Cleaned up HTML code; reclassified divs and sections and fixed section/div order

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
     <div class="content-wrapper">
       <a href="#"><img src="" alt="unplugged logo"></a>
-      <div class="header-divider">
-        <img src="assets/unpluggedlogo.png">
-      </div>
+      <img src="assets/unpluggedlogo.png">
+     
+      <div class="header-divider"></div>
 
       <nav>
         <ul>
@@ -38,59 +38,117 @@
           <li><a href="about/index.html" target="_blank">ABOUT</a></li>
         </ul>
       </nav>
-
-      <h2>Retreat from the desk, return refreshed.</h2>
     </div>
 
   </header>
 
   <main>
-    <section>
-      <div>
-        <h2>Have the work week you always dreamed of &mdash; without the bad wifi.</h2>
-      </div>
 
-      <h2>Be a better team in 5 days, like these.</h2>
-      <img src="assets/omar-lopez-296944-unsplash.jpg">
-      <h4>LaCrue Bottling Co. <br> October 2017</h4>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
-        dolore eu fugiat nulla pariatur.</p>
+    <section class="hero-area">
+      <div class="content-wrapper">
+        <h1>Retreat from the desk, return refreshed.</h1>
+      </div>
     </section>
 
     <aside>
-      <div class="sign-up">
-        <h4>Want to join the next retreat?</h4>
-        <p>Find out where we are holding our next retreat and how your company or team can sign up!</p> 
-        <p>Find out more.</p>
+      <div class="form-description">
+        <h3>Want to join the next retreat?</h3>
+        <p>
+          Find out where we are holding our next retreat and how your company or team can sign up!
+        </p> 
+      </div>
+
+      <div class="form">
+        <h3>Find out more.</h3>
         <input type="text" name="name" value="email address">
         <input type="button" value="Download Itinery">
       </div>
-    </aside>
-  </main>
+    </aside> <!--aside wrapper-->
+
+    <section class="features">
+      <div class="content-wrapper">
+        <h2>Have the work week you always dreamed of &mdash; without the bad wifi.</h2>
+
+        <div class="feature-items">
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="feature-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="feature-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="feature-item-description">Private chef team providing on demand meals &mdash; just like your team kitchen.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="feature-item-description">5 outdoor obstacle courses, including private beach 1/2 mile from bungalow.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="feature-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="feature-item-description">Dedicated computer room for times when you must visit wifi.</p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <section class="reviews">
+      <div class="content-wrapper">
+        <h2>Be a better team in 5 days, like these.</h2>
+        <article>
+          <div>
+            <img src="assets/omar-lopez-296944-unsplash.jpg">
+            <h3>LaCrue Bottling Co. <br> October 2019</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna 
+              aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            </p>
+          </div>
+      </article>
+      </div>
+    </section>
+
+  </main> <!--main wrapper-->
 
   <footer>
     <div class="content-wrapper">
       <div class="footer-content">
         <div class="contact">
+          <h4>Contact</h4>
           <address>
-            <p>555-555-5555 <br>
+            <p>
+              555-555-5555 <br>
               <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
             </p>
         </address>
         </div>
         <div class="social">
+          <h4>Social</h4>
           <div class="social-icons">
-            <p><a href="http://www.facebook.com" target="_blank"></a></p>
-            <p><a href="http://www.twitter.com" target="_blank"></a></p>
-            <p><a href="http://www.instagram.com" target="_blank"></a></p>
+            <p>
+              <a href="http://www.facebook.com" target="_blank"></a>
+            </p>
+            <p>
+              <a href="http://www.twitter.com" target="_blank"></a>
+            </p>
+            <p>
+              <a href="http://www.instagram.com" target="_blank"></a>
+            </p>
           </div>
         </div>
       </div>
     </div>
+    <!--footer wrapper content ends!-->
 
     <div class="copywright">
-      <p>Copywright 2015 | Unplugged</p>
+      <p>Copywright 2020 | Unplugged</p>
     </div>
   </footer>
   
