Coded About page HTML

--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,52 +23,112 @@
 </head>
 
 <body>
-
   <!-- Add your site or application content here -->
   <header>
 
     <div class="content-wrapper">
       <a href="#"><img src="" alt="unplugged logo"></a>
-      <div class="header-divider">
-        <img src="assets/unpluggedlogo.png">
-      </div>
+      <img src="assets/unpluggedlogo.png">
+     
+      <div class="header-divider"></div>
 
       <nav>
         <ul>
-          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-          <li><a href="about/index.html" target="_blank">ABOUT</a></li>
+          <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="../about/index.html" target="_blank">ABOUT</a></li>
         </ul>
       </nav>
-
-      <h2>Retreat from the desk, return refreshed.</h2>
     </div>
 
   </header>
 
-  <main></main>
+  <main>
+    <section class="mission">
+      <div class="content-wrapper">
+        <div class="mission-content">
+          <h1>Our Mission &mdash; we want to make you the team you always wanted to be.</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
+            dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+            non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
+            dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+            non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+      </div> <!-- mission content wrapper ends -->
+    </section>
+
+    <section class="map">
+      <div class="content-wrapper">
+        <figure></figure>
+      </div>
+    </section>
+
+    <section class="content-section">
+      <div class="content-wrapper">
+        <h2>Contact us, because you all need this.</h2>
+
+        <h3>General Information</h3>
+        <div>
+          <address>
+            <p>
+              333 Main St, Lake Geneva, WI 53147 <br>
+              555-555-5555 <br>
+              hello@unplugged.com
+            </p>
+          </address>  
+        </div>
+
+        <h3>Chat with a Facilitator</h3>
+        <div>
+          <address>
+            <p>
+              555-555-5556 <br>
+              facilitator@unplugged.com
+            </p>
+          </address>  
+        </div>
+      </div>
+    </section>
+  </main>
 
   <footer>
     <div class="content-wrapper">
       <div class="footer-content">
         <div class="contact">
+          <h4>Contact</h4>
           <address>
-            <p>555-555-5555 <br>
-              <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
+            <p>
+              555-555-5555 <br>
+              hello@unplugged.com
             </p>
         </address>
         </div>
         <div class="social">
+          <h4>Social</h4>
           <div class="social-icons">
-            <p><a href="http://www.facebook.com" target="_blank"></a></p>
-            <p><a href="http://www.twitter.com" target="_blank"></a></p>
-            <p><a href="http://www.instagram.com" target="_blank"></a></p>
+            <p>
+              <a href="http://www.facebook.com" target="_blank"></a>
+            </p>
+            <p>
+              <a href="http://www.twitter.com" target="_blank"></a>
+            </p>
+            <p>
+              <a href="http://www.instagram.com" target="_blank"></a>
+            </p>
           </div>
         </div>
       </div>
     </div>
+    <!--footer wrapper content ends!-->
 
     <div class="copywright">
-      <p>Copywright 2015 | Unplugged</p>
+      <p>Copywright 2020 | Unplugged</p>
     </div>
   </footer>
   
