--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           <address>
             <p>
               555-555-5555 <br>
-              <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
+              hello@unplugged.com
             </p>
         </address>
         </div>
