Coded FAQ page HTML, adjusted comments on About page

--- a/about/index.html
+++ b/about/index.html
@@ -60,7 +60,7 @@
             non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           </p>
         </div>
-      </div> <!-- mission content wrapper ends -->
+      </div> <!--mission content wrapper ends-->
     </section>
 
     <section class="map">
@@ -125,7 +125,7 @@
         </div>
       </div>
     </div>
-    <!--footer wrapper content ends!-->
+    <!--footer wrapper content ends-->
 
     <div class="copywright">
       <p>Copywright 2020 | Unplugged</p>
