--- a/faq/index.html
+++ b/faq/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,52 +23,98 @@
 </head>
 
 <body>
-
   <!-- Add your site or application content here -->
   <header>
 
     <div class="content-wrapper">
       <a href="#"><img src="" alt="unplugged logo"></a>
-      <div class="header-divider">
-        <img src="assets/unpluggedlogo.png">
-      </div>
+      <img src="assets/unpluggedlogo.png">
+     
+      <div class="header-divider"></div>
 
       <nav>
         <ul>
-          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-          <li><a href="about/index.html" target="_blank">ABOUT</a></li>
+          <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="../about/index.html" target="_blank">ABOUT</a></li>
         </ul>
       </nav>
-
-      <h2>Retreat from the desk, return refreshed.</h2>
     </div>
 
   </header>
 
-  <main></main>
+  <main class="faq">
+    <div class="content-wrapper">
+      <h2>Frequently Asked Questions</h2>
+
+      <div class="faq-content">
+        <h4>How do I get the Unplugged retreat?</h4>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+          et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea 
+          commodo consequat.
+        </p>
+      </div>
+
+      <div class="faq-content">
+        <h4>What kind of team is right for the Unplugged retreat?</h4>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+          et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea 
+          commodo consequat.
+        </p>
+      </div>
+
+      <div class="faq-content">
+        <h4>What size teams can you accommodate?</h4>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+          et dolore magna aliqua.
+        </p>
+      </div>
+
+      <div class="faq-content">
+        <h4>Is there really no wifi available?</h4>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+          et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea 
+          commodo consequat.
+        </p>
+      </div> <!--faq content wrapper ends-->
+    </div>
+  </main>
 
   <footer>
     <div class="content-wrapper">
       <div class="footer-content">
         <div class="contact">
+          <h4>Contact</h4>
           <address>
-            <p>555-555-5555 <br>
-              <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
+            <p>
+              555-555-5555 <br>
+              hello@unplugged.com
             </p>
         </address>
         </div>
         <div class="social">
+          <h4>Social</h4>
           <div class="social-icons">
-            <p><a href="http://www.facebook.com" target="_blank"></a></p>
-            <p><a href="http://www.twitter.com" target="_blank"></a></p>
-            <p><a href="http://www.instagram.com" target="_blank"></a></p>
+            <p>
+              <a href="http://www.facebook.com" target="_blank"></a>
+            </p>
+            <p>
+              <a href="http://www.twitter.com" target="_blank"></a>
+            </p>
+            <p>
+              <a href="http://www.instagram.com" target="_blank"></a>
+            </p>
           </div>
         </div>
       </div>
     </div>
+    <!--footer wrapper content ends!-->
 
     <div class="copywright">
-      <p>Copywright 2015 | Unplugged</p>
+      <p>Copywright 2020 | Unplugged</p>
     </div>
   </footer>
   
