Begun coding CSS base styles for site pages

--- a/about/index.html
+++ b/about/index.html
@@ -27,8 +27,7 @@
   <header>
 
     <div class="content-wrapper">
-      <a href="#"><img src="" alt="unplugged logo"></a>
-      <img src="assets/unpluggedlogo.png">
+      <a href="#"><img src="../assets/unpluggedlogo.png" alt="unplugged logo"></a>
      
       <div class="header-divider"></div>
 
@@ -41,6 +40,7 @@
     </div>
 
   </header>
+
 
   <main>
     <section class="mission">
