--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <meta property="og:url" content="">
   <meta property="og:image" content="">
 
-  <link rel="manifest" href="../site.webmanifest">
-  <link rel="apple-touch-icon" href="../icon.png">
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -27,8 +27,7 @@
   <header>
 
     <div class="content-wrapper">
-      <a href="#"><img src="" alt="unplugged logo"></a>
-      <img src="assets/unpluggedlogo.png">
+      <a href="#"><img src="assets/unpluggedlogo.png" alt="unplugged logo"></a>
      
       <div class="header-divider"></div>
 
