--- a/faq/index.html
+++ b/faq/index.html
@@ -27,8 +27,7 @@
   <header>
 
     <div class="content-wrapper">
-      <a href="#"><img src="" alt="unplugged logo"></a>
-      <img src="assets/unpluggedlogo.png">
+      <a href="#"><img src="../assets/unpluggedlogo.png" alt="unplugged logo"></a>
      
       <div class="header-divider"></div>
 
@@ -41,6 +40,7 @@
     </div>
 
   </header>
+
 
   <main class="faq">
     <div class="content-wrapper">
@@ -80,6 +80,7 @@
           commodo consequat.
         </p>
       </div> <!--faq content wrapper ends-->
+      
     </div>
   </main>
 
