Finished tablet css styles for all pages; added missing class to about page; corrected contact classifier on homepage

--- a/about/index.html
+++ b/about/index.html
@@ -69,7 +69,7 @@
       </div>
     </section>
 
-    <section class="content-section">
+    <section class="contact-section">
       <div class="content-wrapper">
         <h2>Contact us, because you all need this.</h2>
 
