--- a/index.html
+++ b/index.html
@@ -50,17 +50,19 @@
     </section>
 
     <aside>
-      <div class="form-description">
-        <h3>Want to join the next retreat?</h3>
-        <p>
-          Find out where we are holding our next retreat and how your company or team can sign up!
-        </p> 
-      </div>
+      <div class="content-wrapper">
+        <div class="form-description">
+          <h3>Want to join the next retreat?</h3>
+          <p>
+            Find out where we are holding our next retreat and how your company or team can sign up!
+          </p> 
+        </div>
 
-      <div class="form">
-        <h3>Find out more.</h3>
-        <input type="text" name="name" value="email address">
-        <input type="button" value="Download Itinery">
+        <div class="form">
+          <h3>Find out more.</h3>
+          <input type="text" name="name" value="email address">
+          <input type="button" value="Download Itinery">
+        </div>
       </div>
     </aside> <!--aside wrapper-->
 
