--- a/index.html
+++ b/index.html
@@ -31,10 +31,13 @@
   <header>
 
     <div class="content-wrapper">
-      <a href="#"><img src="assets/unpluggedlogo.png" alt="unplugged logo"></a>
-     
+      <figure>
+        <a href="#">
+          <img src="img/unpluggedlogo.png" alt="unplugged logo">
+        </a>
+      </figure>
       <div class="header-divider"></div>
-
+  
       <nav>
         <ul>
           <li><a href="faq/index.html" target="_blank">FAQ</a></li>
@@ -64,7 +67,7 @@
 
         <div class="form">
           <h3>Find out more.</h3>
-          <input type="text" name="name" value="email address">
+          <input type="text" name="name" value="name@email.com">
           <input type="button" value="Download Itinery">
         </div>
       </div>
@@ -73,8 +76,9 @@
     <section class="features">
       <div class="content-wrapper">
         <h2>Have the work week you always dreamed of &mdash; without the bad wifi.</h2>
-
-        <div class="feature-items">
+      </div>       
+      
+      <div class="feature-items">
           <article>
             <p class="fontawesome-icon"></p>
             <p class="feature-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
@@ -107,6 +111,12 @@
       <div class="content-wrapper">
         <h2>Be a better team in 5 days, like these.</h2>
         <article>
+          <figure>
+            <a href="">
+              <img src="img/omar-lopez-296944-unsplash.jpg" alt="Group photo of a tech team on an Unplugged Retreat">
+            </a>
+          </figure>
+
           <div>
             <h3>LaCrue Bottling Co. <br> October 2019</h3>
             <p>
