Added google maps iframe; adjusted reviews section and homepage headers; re-classified footer content; tried troubleshotting header, heor area, etc

--- a/about/index.html
+++ b/about/index.html
@@ -53,24 +53,23 @@
           <h1>Our Mission &mdash; we want to make you the team you always wanted to be.</h1>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
-            dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-            non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
           </p>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
-            dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-            non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
           </p>
         </div>
       </div> <!--mission content wrapper ends-->
     </section>
 
     <section class="map">
-      <div class="content-wrapper">
-        <figure></figure>
-      </div>
+        <figure>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d96826.07680950015!2d-73.82753809240559!3d40.67804720138224!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c26065d1fa4b27%3A0x993207f89acb9dee!2sKing%20Manor%20Museum!5e0!3m2!1sen!2sus!4v1625331831281!5m2!1sen!2sus" 
+          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
+          </iframe>
+        </figure>
     </section>
 
     <section class="contact-section">
@@ -103,7 +102,7 @@
 
   <footer>
     <div class="content-wrapper">
-      <div class="footer-content">
+      <div class="contact-content">
         <div class="contact">
           <h4>Contact</h4>
           <address>
