--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
     <section class="reviews">
       <div class="content-wrapper">
-        <h2>Be a better team in 5 days, like these.</h2>
+        <h2>Be a better team in 5 days, like this one.</h2>
         <article>
           <figure>
             <a href="">
