--- a/faq/index.html
+++ b/faq/index.html
@@ -23,6 +23,9 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+
+  <!-- Fonts Awesome Fonts -->
+  <script src="https://kit.fontawesome.com/c0dac30356.js" crossorigin="anonymous"></script>
   
 </head>
 
