--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 
+  <!-- Fonts Awesome Fonts -->
+  <script src="https://kit.fontawesome.com/c0dac30356.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -80,27 +83,39 @@
       
       <div class="feature-items">
           <article>
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon">
+              <i class="fas fa-campground"></i>
+            </p>
             <p class="feature-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
           </article>
           <article>
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon">
+              <i class="fas fa-bed"></i>
+            </p>
             <p class="feature-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
           </article>
           <article>
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon">
+              <i class="fas fa-utensils"></i>
+            </p>
             <p class="feature-item-description">Private chef team providing on demand meals &mdash; just like your team kitchen.</p>
           </article>
           <article>
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon">
+              <i class="fas fa-shoe-prints"></i>
+            </p>
             <p class="feature-item-description">5 outdoor obstacle courses, including private beach 1/2 mile from bungalow.</p>
           </article>
           <article>
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon">
+              <i class="fas fa-smile"></i>
+            </p>
             <p class="feature-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
           </article>
           <article>
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon">
+              <i class="fas fa-wifi"></i>
+            </p>
             <p class="feature-item-description">Dedicated computer room for times when you must visit wifi.</p>
           </article>
         </div>
