Added social media icons to footer

--- a/index.html
+++ b/index.html
@@ -162,13 +162,13 @@
           <h4>Social</h4>
           <div class="social-icons">
             <p>
-              <a href="http://www.facebook.com" target="_blank"></a>
+              <a href=""><i class="fab fa-facebook"></i></a>
             </p>
             <p>
-              <a href="http://www.twitter.com" target="_blank"></a>
+              <a href=""><i class="fab fa-twitter"></i></a>
             </p>
             <p>
-              <a href="http://www.instagram.com" target="_blank"></a>
+              <a href=""><i class="fab fa-instagram"></i></a>
             </p>
           </div>
         </div>
