Added font icon code to about and faq html; finished tablet styles saves for issues on about and home pages

--- a/faq/index.html
+++ b/faq/index.html
@@ -34,19 +34,23 @@
   <header>
 
     <div class="content-wrapper">
-      <a href="#"><img src="../assets/unpluggedlogo.png" alt="unplugged logo"></a>
-     
+      <figure>
+        <a href="#">
+          <img src="../img/unpluggedlogo.png" alt="unplugged logo">
+        </a>
+      </figure>
       <div class="header-divider"></div>
-
+  
       <nav>
         <ul>
-          <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
-          <li><a href="../about/index.html" target="_blank">ABOUT</a></li>
+          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="about/index.html" target="_blank">ABOUT</a></li>
         </ul>
       </nav>
     </div>
 
   </header>
+
 
 
   <main class="faq">
@@ -93,7 +97,7 @@
 
   <footer>
     <div class="content-wrapper">
-      <div class="footer-content">
+      <div class="contact-content">
         <div class="contact">
           <h4>Contact</h4>
           <address>
@@ -107,13 +111,13 @@
           <h4>Social</h4>
           <div class="social-icons">
             <p>
-              <a href="http://www.facebook.com" target="_blank"></a>
+              <a href=""><i class="fab fa-facebook"></i></a>
             </p>
             <p>
-              <a href="http://www.twitter.com" target="_blank"></a>
+              <a href=""><i class="fab fa-twitter"></i></a>
             </p>
             <p>
-              <a href="http://www.instagram.com" target="_blank"></a>
+              <a href=""><i class="fab fa-instagram"></i></a>
             </p>
           </div>
         </div>
