--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
   <footer>
     <div class="content-wrapper">
-      <div class="footer-content">
+      <div class="contact-content">
         <div class="contact">
           <h4>Contact</h4>
           <address>
