--- a/about/index.html
+++ b/about/index.html
@@ -34,19 +34,23 @@
   <header>
 
     <div class="content-wrapper">
-      <a href="#"><img src="../assets/unpluggedlogo.png" alt="unplugged logo"></a>
-     
+      <figure>
+        <a href="#">
+          <img src="../img/unpluggedlogo.png" alt="unplugged logo">
+        </a>
+      </figure>
       <div class="header-divider"></div>
-
+  
       <nav>
         <ul>
-          <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
-          <li><a href="../about/index.html" target="_blank">ABOUT</a></li>
+          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="about/index.html" target="_blank">ABOUT</a></li>
         </ul>
       </nav>
     </div>
 
   </header>
+
 
 
   <main>
@@ -119,19 +123,19 @@
           <h4>Social</h4>
           <div class="social-icons">
             <p>
-              <a href="http://www.facebook.com" target="_blank"></a>
+              <a href=""><i class="fab fa-facebook"></i></a>
             </p>
             <p>
-              <a href="http://www.twitter.com" target="_blank"></a>
+              <a href=""><i class="fab fa-twitter"></i></a>
             </p>
             <p>
-              <a href="http://www.instagram.com" target="_blank"></a>
+              <a href=""><i class="fab fa-instagram"></i></a>
             </p>
           </div>
         </div>
       </div>
     </div>
-    <!--footer wrapper content ends-->
+    <!--footer wrapper content ends!-->
 
     <div class="copywright">
       <p>Copywright 2020 | Unplugged</p>
