Fixed navigation links in about and faq pages; fixed class names feature-items and faq-content; fixed css issues for mobile; struggling with faq mobile page.

--- a/about/index.html
+++ b/about/index.html
@@ -43,8 +43,8 @@
   
       <nav>
         <ul>
-          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-          <li><a href="about/index.html" target="_blank">ABOUT</a></li>
+          <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="../about/index.html" target="_blank">ABOUT</a></li>
         </ul>
       </nav>
     </div>
