--- a/index.html
+++ b/index.html
@@ -79,9 +79,7 @@
     <section class="features">
       <div class="content-wrapper">
         <h2>Have the work week you always dreamed of &mdash; without the bad wifi.</h2>
-      </div>       
-      
-      <div class="feature-items">
+        <div class="feature-items">
           <article>
             <p class="fontawesome-icon">
               <i class="fas fa-campground"></i>
@@ -148,7 +146,7 @@
 
   <footer>
     <div class="content-wrapper">
-      <div class="contact-content">
+      <div class="footer-content">
         <div class="contact">
           <h4>Contact</h4>
           <address>
