--- a/faq/index.html
+++ b/faq/index.html
@@ -43,8 +43,8 @@
   
       <nav>
         <ul>
-          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-          <li><a href="about/index.html" target="_blank">ABOUT</a></li>
+          <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="../about/index.html" target="_blank">ABOUT</a></li>
         </ul>
       </nav>
     </div>
