Added classes to contact section on about page; made overall contact section flex; issues with getting specific address classes to respond to 'display:flex'.

--- a/about/index.html
+++ b/about/index.html
@@ -83,9 +83,9 @@
       <div class="content-wrapper">
         <h2>Contact us, because you all need this.</h2>
 
-        <h3>General Information</h3>
         <div>
-          <address>
+          <address class="gen-info">
+            <h3>General Information</h3>
             <p>
               333 Main St, Lake Geneva, WI 53147 <br>
               555-555-5555 <br>
@@ -94,9 +94,9 @@
           </address>  
         </div>
 
-        <h3>Chat with a Facilitator</h3>
         <div>
-          <address>
+          <address class="chat-info">
+            <h3>Chat with a Facilitator</h3>
             <p>
               555-555-5556 <br>
               facilitator@unplugged.com
