Made unplugged logo link to homepage in all index files.

--- a/about/index.html
+++ b/about/index.html
@@ -35,7 +35,7 @@
 
     <div class="content-wrapper">
       <figure>
-        <a href="#">
+        <a href="../index.html" target="_blank">
           <img src="../img/unpluggedlogo.png" alt="unplugged logo">
         </a>
       </figure>
