--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <div class="content-wrapper">
       <figure>
-        <a href="../index.html" target="_blank">
+        <a href="index.html" target="_blank">
           <img src="img/unpluggedlogo.png" alt="unplugged logo">
         </a>
       </figure>
